add rus version & cross browser tests

--- a/index_ru.html
+++ b/index_ru.html
@@ -32,12 +32,12 @@
         <div class="top-banner-txt">
           <div class="row">
             <div class="col-md-7">
-              <h2>Kiire ja mugav lisaraha siis, kui seda vajad</h2>
-              <p>Vahel lihtsalt juhtub, et vajad veidi lisaraha. Põhjuseks võib olla mõni ootamatu kulu või siiras soov ellu viia pikaajaline unistus.</p>
+              <h2>Дополнительные средства – быстро, удобно и именно тогда, когда нужно</h2>
+              <p>Бывают моменты, когда внезапно появляется потребность в небольшой дополнительной сумме денег. Причиной могут быть непредвиденные расходы или искреннее желание осуществить давнюю мечту.</p>
               <ul class="top-list">
-                <li><img src="./assets/images/tick.png" alt=""> Saad raha kätte 15 minutiga</li>
-                <li><img src="./assets/images/tick.png" alt=""> Võimalus taotleda kuni 4000 eurot</li>
-                <li><img src="./assets/images/tick.png" alt=""> Maksa tagasi 3-36 kuu jooksul</li>
+                <li><img src="./assets/images/tick.png" alt=""> Вы получите деньги через 15 минут</li>
+                <li><img src="./assets/images/tick.png" alt=""> Можете ходатайствовать о сумме до 4000€</li>
+                <li><img src="./assets/images/tick.png" alt=""> Срок возврата от 3 до 36 месяцев</li>
               </ul>
             </div>
           </div>
@@ -47,11 +47,11 @@
             <div class="panel">
               <div class="panel-top-wrap">
                 <div class="panel-top-cell">
-                  <span>Summa:</span>
+                  <span>Cумма:</span>
                   <b>1350€</b>
                 </div><!--
                 --><div class="panel-top-cell">
-                  <span>Sinu kuumakse:</span>
+                  <span>Ежемесячный платеж:</span>
                   <b>68.95€</b>
                 </div>
               </div>
@@ -61,7 +61,7 @@
                   <input id="range1" data-slider-id='ex1Slider' type="text" data-slider-min="50" data-slider-max="4000" data-slider-step="1" data-slider-value="14"/>
                   <span class="count">4000€</span>
                 </div>
-                <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+                <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
               </div>
             </div>
           </div>
@@ -76,27 +76,27 @@
               <div class="img-wrap">
                 <img src="./assets/images/info-icon-1.png" alt="">
               </div>
-              <h4>Kodu remondiks</h4>
+              <h4>На ремонт дома</h4>
               <p>
-                Sul pole vaja tagatist ega kulukat notariaalselt lepingut.
+                Не нужно вносить залог или оформлять дорогостоящий нотариальный договор
               </p>
             </div>
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/info-icon-2.png" alt="">
               </div>
-              <h4>Auto ostmiseks</h4>
+              <h4>На приобретение автомобиля</h4>
               <p>
-                Saad sõiduki kohe enda nimele vormistada ning kaskokindlustus on vabatahtlik.
+                Можно сразу зарегистрировать автомобиль на свое имя и без оформления страховки Каско
               </p>
             </div>
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/info-icon-3.png" alt="">
               </div>
-              <h4>Kaupade eest tasumiseks</h4>
+              <h4>На оплату покупок</h4>
               <p>
-                Osta kõike, mida soovid ning maksa raha tagasi siis, kui see Sulle mugav on.
+                Покупайте все, что пожелаете, и возвращайте деньги тогда, когда будет возможность
               </p>
             </div>
           </div>
@@ -107,7 +107,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
-              <h2>Miks võtta lisaraha Credit24'st?</h2>
+              <h2>Почему стоит обратиться за дополнительными средствами именно в Credit24?</h2>
               <ul class="question-list">
                 <li class="list-group">
                   <div class="check-cell">
@@ -115,7 +115,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Ühekordne leping - edaspidi kasuta lisaraha täpselt siis, kui seda soovid
+                      Разовый договор - в дальнейшем можно обращаться за дополнительными средствами только если появится необходимость
                     </span>
                   </div>
                 </li>
@@ -125,7 +125,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Paindlik maksegraafik - Sina otsustad, millal ja kui palju tagasi maksad
+                      Гибкий график – суммы и время выплат устанавливаете самостоятельно
                     </span>
                   </div>
                 </li>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Kuutasu 0€
+                      Ежемесячный платеж 0€
                     </span>
                   </div>
                 </li>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Kui kasutusse võetud summa ületab 1000 €, alustad tagasi maksmist 2 kuu pärast
+                      Если взятая сумма превышает 1000€, то выплаты начинаются только через 2 месяца
                     </span>
                   </div>
                 </li>
@@ -155,7 +155,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Intressi maksad vaid kasutatud summalt
+                      Проценты выплачиваются только с использованной суммы
                     </span>
                   </div>
                 </li>
@@ -165,7 +165,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Tutvu pakkumise tingimustega lähemalt meie <a href="https://credit24.com/ee/krediidikonto/">kodulehel</a>.
+                      Ознакомьтесь с условиями предложения на <a href="https://credit24.com/ee/krediidikonto/">нашем сайте</a>.
                     </span>
                   </div>
                 </li>
@@ -181,7 +181,7 @@
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2">
                     <div class="list-block">
-                      <h4>Kuidas saada raha kätte 15 minutiga?</h4>
+                      <h4>Как получить деньги за 15 минут?</h4>
                       <ul class="list">
                         <li>
                           <div class="icon-wrap">
@@ -189,7 +189,7 @@
                               <img src="./assets/images/list-icon-1.png" alt="">
                             </div>
                           </div>
-                          <span>Vajuta “Taotlen kohe” nupule</span>
+                          <span>Нажмите на кнопку «Отправить заявку»</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -197,7 +197,7 @@
                               <img src="./assets/images/list-icon-2.png" alt="">
                             </div>
                           </div>
-                          <span>Täida avaldus ja vali soovitud summa</span>
+                          <span>Заполните заявление и выберите желаемую сумму</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -205,7 +205,7 @@
                               <img src="./assets/images/list-icon-3.png" alt="">
                             </div>
                           </div>
-                          <span>Saa hetkega personaalne pakkumine</span>
+                          <span>Через пару минут Вы получите персональное предложение</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -213,7 +213,7 @@
                               <img src="./assets/images/list-icon-4.png" alt="">
                             </div>
                           </div>
-                          <span>Sinuga võtab ühendust meie kliendihaldur, et täpsustada detailid</span>
+                          <span>Наш специалист свяжется с Вами, чтобы уточнить детали</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -221,10 +221,10 @@
                               <img src="./assets/images/list-icon-5.png" alt="">
                             </div>
                           </div>
-                          <span>Raha kantakse Sinu Credit24 kontole</span>
+                          <span>Деньги будут перечислены на Ваш персональный счет в Credit24.</span>
                         </li>
                       </ul>
-                      <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+                      <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
                     </div>
                   </div>
                 </div>
