--- a/index_ru.html
+++ b/index_ru.html
@@ -242,8 +242,8 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="footer-txt">
-            <p>Credit24 pakub krediiti Krediidikonto limiidi alusel. 1000 € laenamisel 12 kuuks, fikseeritud intressimääraga 45,00% aastas, on KKM 56,50% aastas, lepingutasu 0 €, tagasimaksete summa 1260,15 € ja kogusumma 1260,15 €. Tutvu tingimustega credit24.ee ja pea nõu asjatundjaga lühinumbril 1324.</p>
-            <a href="#" class="foot-ask">Vajad abi?</a>
+            <p>Credit24 предлагает кредит на основании лимита Кредитного счёта. При займе 1000 € на 12 месяцев с фиксированной процентной ставкой 45,00% годовых, KKM будет 56,50% в год, стоимость заключения договора 0 €, сумма платежей 1260,15 € и общая сумма выплаты 1260,15 €. Ознакомьтесь с условиями на credit24.ee и посоветуйтесь со специалистами по номеру 1324.</p>
+            <a href="#" class="foot-ask">Вопросы?</a>
             <div class="row">
               <div class="col-sm-6">
                 <a href="#" class="btn btn-blue" data-toggle="modal" data-target="#phoneModal"><img src="./assets/images/button-icon-1.png" alt=""> <span>1324</span></a>
