add estonian flag and fix text

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Ühekordne leping - edaspidi kasuta lisaraha täpselt siis, kui seda soovid
+                      Ühekordne leping - edaspidi kasuta lisaraha täpselt siis, kui seda soovid.
                     </span>
                   </div>
                 </li>
@@ -125,7 +125,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Paindlik maksegraafik - Sina otsustad, millal ja kui palju tagasi maksad
+                      Paindlik maksegraafik - Sina otsustad, millal ja kui palju tagasi maksad.
                     </span>
                   </div>
                 </li>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Kuutasu 0€
+                      Kuutasu 0€.
                     </span>
                   </div>
                 </li>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Kui kasutusse võetud summa ületab 1000 €, alustad tagasi maksmist 2 kuu pärast
+                      Kui kasutusse võetud summa ületab 1000 €, alustad tagasi maksmist 2 kuu pärast.
                     </span>
                   </div>
                 </li>
@@ -155,7 +155,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Intressi maksad vaid kasutatud summalt
+                      Intressi maksad vaid kasutatud summalt.
                     </span>
                   </div>
                 </li>
@@ -189,7 +189,7 @@
                               <img src="./assets/images/list-icon-1.png" alt="">
                             </div>
                           </div>
-                          <span>Vajuta “Taotlen kohe” nupule</span>
+                          <span>Vajuta “Taotlen kohe” nupule.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -197,7 +197,7 @@
                               <img src="./assets/images/list-icon-2.png" alt="">
                             </div>
                           </div>
-                          <span>Täida avaldus ja vali soovitud summa</span>
+                          <span>Täida avaldus ja vali soovitud summa.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -205,7 +205,7 @@
                               <img src="./assets/images/list-icon-3.png" alt="">
                             </div>
                           </div>
-                          <span>Saa hetkega personaalne pakkumine</span>
+                          <span>Saa hetkega personaalne pakkumine.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -213,7 +213,7 @@
                               <img src="./assets/images/list-icon-4.png" alt="">
                             </div>
                           </div>
-                          <span>Sinuga võtab ühendust meie kliendihaldur, et täpsustada detailid</span>
+                          <span>Sinuga võtab ühendust meie kliendihaldur, et täpsustada detailid.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -221,7 +221,7 @@
                               <img src="./assets/images/list-icon-5.png" alt="">
                             </div>
                           </div>
-                          <span>Raha kantakse Sinu Credit24 kontole</span>
+                          <span>Raha kantakse Sinu Credit24 kontole.</span>
                         </li>
                       </ul>
                       <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
