--- a/index_ru.html
+++ b/index_ru.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-xs-6 text-right">
               <a href="#" class="flag-link">
-                <img src="./assets/images/language-icon.png" alt="">
+                <img src="./assets/images/language-estonian.png" alt="">
               </a>
             </div>
           </div>
@@ -78,7 +78,7 @@
               </div>
               <h4>На ремонт дома</h4>
               <p>
-                Не нужно вносить залог или оформлять дорогостоящий нотариальный договор
+                Не нужно вносить залог или оформлять дорогостоящий нотариальный договор.
               </p>
             </div>
             <div class="col-md-4 info-block">
@@ -87,7 +87,7 @@
               </div>
               <h4>На приобретение автомобиля</h4>
               <p>
-                Можно сразу зарегистрировать автомобиль на свое имя и без оформления страховки Каско
+                Можно сразу зарегистрировать автомобиль на свое имя и без оформления страховки Каско.
               </p>
             </div>
             <div class="col-md-4 info-block">
@@ -96,7 +96,7 @@
               </div>
               <h4>На оплату покупок</h4>
               <p>
-                Покупайте все, что пожелаете, и возвращайте деньги тогда, когда будет возможность
+                Покупайте все, что пожелаете, и возвращайте деньги тогда, когда будет возможность./
               </p>
             </div>
           </div>
@@ -115,7 +115,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Разовый договор - в дальнейшем можно обращаться за дополнительными средствами только если появится необходимость
+                      Разовый договор - в дальнейшем можно обращаться за дополнительными средствами только если появится необходимость.
                     </span>
                   </div>
                 </li>
@@ -125,7 +125,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Гибкий график – суммы и время выплат устанавливаете самостоятельно
+                      Гибкий график – суммы и время выплат устанавливаете самостоятельно.
                     </span>
                   </div>
                 </li>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Ежемесячный платеж 0€
+                      Ежемесячный платеж 0€.
                     </span>
                   </div>
                 </li>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Если взятая сумма превышает 1000€, то выплаты начинаются только через 2 месяца
+                      Если взятая сумма превышает 1000€, то выплаты начинаются только через 2 месяца.
                     </span>
                   </div>
                 </li>
@@ -155,7 +155,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Проценты выплачиваются только с использованной суммы
+                      Проценты выплачиваются только с использованной суммы.
                     </span>
                   </div>
                 </li>
@@ -189,7 +189,7 @@
                               <img src="./assets/images/list-icon-1.png" alt="">
                             </div>
                           </div>
-                          <span>Нажмите на кнопку «Отправить заявку»</span>
+                          <span>Нажмите на кнопку «Отправить заявку».</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -197,7 +197,7 @@
                               <img src="./assets/images/list-icon-2.png" alt="">
                             </div>
                           </div>
-                          <span>Заполните заявление и выберите желаемую сумму</span>
+                          <span>Заполните заявление и выберите желаемую сумму.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -205,7 +205,7 @@
                               <img src="./assets/images/list-icon-3.png" alt="">
                             </div>
                           </div>
-                          <span>Через пару минут Вы получите персональное предложение</span>
+                          <span>Через пару минут Вы получите персональное предложение.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
@@ -213,7 +213,7 @@
                               <img src="./assets/images/list-icon-4.png" alt="">
                             </div>
                           </div>
-                          <span>Наш специалист свяжется с Вами, чтобы уточнить детали</span>
+                          <span>Наш специалист свяжется с Вами, чтобы уточнить детали.</span>
                         </li>
                         <li>
                           <div class="icon-wrap">
