fix top banner text paddings and make translate pop-ups

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <h4 class="modal-title">Siin ja praegu ei ole õige hetk?</h4>
         </div>
         <div class="modal-body">
-          <p>Jäta meile oma e-mail. Saadame Sulle personaalselt pakkumise, mis arvestab Sinu võimalustega.</p>
+          <p>Jäta meile oma number. Saadame Sulle personaalselt pakkumise, mis arvestab Sinu võimalustega.</p>
           <form class="modal-form">
             <div class="modal-row">
               <div class="form-group">
