--- a/index_ru.html
+++ b/index_ru.html
@@ -281,14 +281,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Siin ja praegu ei ole õige hetk?</h4>
+          <h4 class="modal-title">НЕ ЛУЧШИЙ МОМЕНТ?</h4>
         </div>
         <div class="modal-body">
-          <p>Jäta meile oma e-mail. Saadame Sulle personaalselt pakkumise, mis arvestab Sinu võimalustega.</p>
+          <p>Оставьте свой e-mail. Мы вышлем Вам персональное предложение, которое будет учитывать Ваши возможности.</p>
           <form class="modal-form">
             <div class="modal-row">
               <div class="form-group">
-                <label for="nimiLabel">Nimi</label>
+                <label for="nimiLabel">Имя</label>
                 <input type="email" class="form-control" id="nimiLabel">
               </div>
               <div class="form-group">
@@ -298,9 +298,9 @@
             </div>
             <div class="checkbox">
               <input id="modalCheck" type="checkbox">
-              <label for="modalCheck">Annan nõusoleku oma andmete töötlemiseks</label>
+              <label for="modalCheck">Даю согласие на обработку своих данных.</label>
             </div>
-            <button type="submit" class="btn btn-orange">Soovin personaalset pakkumist</button>
+            <button type="submit" class="btn btn-orange">Хочу получить персональное предложение.</button>
           </form>
         </div>
       </div>
@@ -311,26 +311,26 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Siin ja praegu ei ole õige hetk?</h4>
+          <h4 class="modal-title">НЕ ЛУЧШИЙ МОМЕНТ?</h4>
         </div>
         <div class="modal-body">
-          <p>Jäta meile oma e-mail. Saadame Sulle personaalselt pakkumise, mis arvestab Sinu võimalustega.</p>
+          <p>Oставьте свой номер. Мы вышлем Вам персональное предложение, которое будет учитывать Ваши возможности.</p>
           <form class="modal-form">
             <div class="modal-row">
               <div class="form-group">
-                <label for="nimiLabel">Nimi</label>
+                <label for="nimiLabel">Имя</label>
                 <input type="email" class="form-control" id="nimiLabel">
               </div>
               <div class="form-group">
-                <label for="phoneLabel">Telefon</label>
+                <label for="phoneLabel">Телефон</label>
                 <input type="text" class="form-control" id="phoneLabel" value="+372">
               </div>
             </div>
             <div class="checkbox">
               <input id="modalCheck2" type="checkbox">
-              <label for="modalCheck2">Annan nõusoleku oma andmete töötlemiseks</label>
+              <label for="modalCheck2">Даю согласие на обработку своих данных.</label>
             </div>
-            <button type="submit" class="btn btn-orange">Soovin personaalset pakkumist</button>
+            <button type="submit" class="btn btn-orange">Хочу получить персональное предложение.</button>
           </form>
         </div>
       </div>
